feat: add secure route for link and auth system
